--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								<div>
 									<h2>Skills</h2>
 									<h6>Technical</h6>
-									<p>Languages: Java, C#, Kotlin, Python, R, SQL, HTML, CSS, JavaScript</p>
+									<p>Languages: Java, C#, Python, R, SQL, HTML, CSS, JavaScript</p>
 									<p>Knowledge in .Net platform, and Blazor framework</p>
 									<p>Familiar with JSON data</p>
 									<p>Solid experience with version control via Git</p>
