increase particle size

--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
                     
                     particles: {
                         number: {
-                            value: 60,
+                            value: 50,
                         },
                         shape: {
-                            type: "square",
+                            type: "circle",
                         },
                         size: {
                             value: 2,
                         },
+							links: {
+							enable: true,
+							opacity: 0.2,
+							distance: 200,
+						},
                     },
                     preset: "links",
                     background: {
